// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cell/BadgeCell Default 1`] = `
<td
  className="align-middle"
>
  <div
    className="d-flex align-items-center"
  >
    <span>
      Badge Cell
    </span>
    <span
      className="ml-1 badge badge-pill badge-primary"
    >
      Primary
    </span>
    <span
      className="ml-1 badge badge-pill badge-secondary"
    >
      Secondary
    </span>
    <span
      className="ml-1 badge badge-pill badge-success"
    >
      Success
    </span>
    <span
      className="ml-1 badge badge-pill badge-danger"
    >
      Danger
    </span>
    <span
      className="ml-1 badge badge-pill badge-warning"
    >
      Warning
    </span>
    <span
      className="ml-1 badge badge-pill badge-info"
    >
      Info
    </span>
    <span
      className="ml-1 badge badge-pill badge-light"
    >
      Light
    </span>
    <span
      className="ml-1 badge badge-pill badge-dark"
    >
      Dark
    </span>
  </div>
</td>
`;

exports[`Storyshots Cell/Cell Default 1`] = `
<td
  className="align-middle"
/>
`;

exports[`Storyshots Cell/Cell Loading 1`] = `
<td
  className="align-middle"
>
  <span
    className="glow-text"
  >
    Loading
  </span>
</td>
`;

exports[`Storyshots Cell/TextCell Default 1`] = `
<td
  className="align-middle"
>
  <span>
    Hello World
  </span>
</td>
`;

exports[`Storyshots Cell/TooltipCell Default 1`] = `
<td
  className="align-middle"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Label
  </div>
</td>
`;

exports[`Storyshots Filter/DefaultFilter Default 1`] = `
<input
  className="form-control"
  data-testid="input"
  onChange={[Function]}
  placeholder="Search 4 records..."
  value=""
/>
`;

exports[`Storyshots Filter/GlobalFilter Default 1`] = `
<div
  className="align-middle ml-2 input-group input-group-sm"
  style={
    Object {
      "width": "initial",
    }
  }
>
  <div
    className="input-group-prepend"
  >
    <span
      className="input-group-text"
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 cKCFNq"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </span>
  </div>
  <input
    className="form-control"
    data-testid="input"
    onChange={[Function]}
    placeholder="4 records..."
    value=""
  />
</div>
`;

exports[`Storyshots Filter/SelectFilter Default 1`] = `
<select
  className="form-control"
  data-testid="input"
  onChange={[Function]}
>
  <option
    value=""
  >
    All
  </option>
  <option
    value="type1"
  >
    type1
  </option>
  <option
    value="type2"
  >
    type2
  </option>
  <option
    value="type3"
  >
    type3
  </option>
</select>
`;

exports[`Storyshots Pagination/InputPage Default 1`] = `
Array [
  <span
    className="mr-1"
  >
    Page:
  </span>,
  <input
    className="form-control form-control-sm"
    data-testid="input"
    defaultValue={1}
    max={5}
    min={1}
    onChange={[Function]}
    style={
      Object {
        "display": "inline",
        "width": "48px",
      }
    }
    type="number"
  />,
]
`;

exports[`Storyshots Pagination/Pagination Large 1`] = `
<div
  className="d-flex justify-content-end align-items-center text-muted"
>
  <div
    className="mr-2"
  >
    200
     records
  </div>
  <span
    className="mr-1"
  >
    Show:
  </span>
  <select
    className="form-control form-control-sm"
    data-testid="input"
    onChange={[Function]}
    style={
      Object {
        "display": "inline",
        "width": "56px",
      }
    }
    value={10}
  >
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
    <option
      value={30}
    >
      30
    </option>
    <option
      value={40}
    >
      40
    </option>
    <option
      value={50}
    >
      50
    </option>
    <option
      value={200}
    >
      All
    </option>
  </select>
  <div
    className="mr-2"
  >
    <div
      className="btn-group btn-group-sm"
      role="group"
      style={
        Object {
          "verticalAlign": "inherit",
        }
      }
    >
      <button
        className="btn btn-white"
        data-testid="previousPage"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 cKCFNq"
          fill="currentColor"
          focusable="false"
          height={20}
          viewBox="0 0 24 24"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
      </button>
      <button
        className="text-primary btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="btn btn-white"
        disabled={true}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 cKCFNq"
          fill="currentColor"
          focusable="false"
          height={16}
          viewBox="0 0 24 24"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        19
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        20
      </button>
      <button
        className="btn btn-white"
        data-testid="nextPage"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 cKCFNq"
          fill="currentColor"
          focusable="false"
          height={20}
          viewBox="0 0 24 24"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div>
    <span
      className="mr-1"
    >
      Page:
    </span>
    <input
      className="form-control form-control-sm"
      data-testid="input"
      defaultValue={1}
      max={20}
      min={1}
      onChange={[Function]}
      style={
        Object {
          "display": "inline",
          "width": "48px",
        }
      }
      type="number"
    />
  </div>
</div>
`;

exports[`Storyshots Pagination/Pagination Medium 1`] = `
<div
  className="d-flex justify-content-end align-items-center text-muted"
>
  <div
    className="mr-2"
  >
    50
     records
  </div>
  <span
    className="mr-1"
  >
    Show:
  </span>
  <select
    className="form-control form-control-sm"
    data-testid="input"
    onChange={[Function]}
    style={
      Object {
        "display": "inline",
        "width": "56px",
      }
    }
    value={10}
  >
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
    <option
      value={30}
    >
      30
    </option>
    <option
      value={40}
    >
      40
    </option>
    <option
      value={50}
    >
      50
    </option>
    <option
      value={50}
    >
      All
    </option>
  </select>
  <div
    className="mr-2"
  >
    <div
      className="btn-group btn-group-sm"
      role="group"
      style={
        Object {
          "verticalAlign": "inherit",
        }
      }
    >
      <button
        className="text-primary btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="btn btn-white"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        5
      </button>
    </div>
  </div>
  <div>
    <span
      className="mr-1"
    >
      Page:
    </span>
    <input
      className="form-control form-control-sm"
      data-testid="input"
      defaultValue={1}
      max={5}
      min={1}
      onChange={[Function]}
      style={
        Object {
          "display": "inline",
          "width": "48px",
        }
      }
      type="number"
    />
  </div>
</div>
`;

exports[`Storyshots Pagination/PaginationAlt Default 1`] = `
Array [
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    1
  </button>,
  <button
    className="btn btn-white"
    disabled={true}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    9
  </button>,
  <button
    className="text-primary btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    10
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    11
  </button>,
  <button
    className="btn btn-white"
    disabled={true}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    15
  </button>,
]
`;

exports[`Storyshots Pagination/PaginationButton Default 1`] = `
<button
  className="btn btn-white"
  data-testid="button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  1
</button>
`;

exports[`Storyshots Pagination/PaginationButton Primary 1`] = `
<button
  className="text-primary btn btn-white"
  data-testid="button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  1
</button>
`;

exports[`Storyshots Pagination/PaginationFL2 Default 1`] = `
Array [
  <button
    className="text-primary btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    1
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    2
  </button>,
  <button
    className="btn btn-white"
    disabled={true}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    14
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    15
  </button>,
]
`;

exports[`Storyshots Pagination/PaginationLarge Default 1`] = `
Array [
  <button
    className="btn btn-white"
    data-testid="previousPage"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={20}
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    1
  </button>,
  <button
    className="btn btn-white"
    disabled={true}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    10
  </button>,
  <button
    className="text-primary btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    11
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    12
  </button>,
  <button
    className="btn btn-white"
    disabled={true}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    20
  </button>,
  <button
    className="btn btn-white"
    data-testid="nextPage"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={20}
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Pagination/PaginationMedium Default 1`] = `
Array [
  <button
    className="text-primary btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    1
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    2
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    3
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    4
  </button>,
  <button
    className="btn btn-white"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    5
  </button>,
]
`;

exports[`Storyshots Pagination/SelectPageSize Default 1`] = `
Array [
  <span
    className="mr-1"
  >
    Show:
  </span>,
  <select
    className="form-control form-control-sm"
    data-testid="input"
    onChange={[Function]}
    style={
      Object {
        "display": "inline",
        "width": "56px",
      }
    }
    value={10}
  >
    <option
      value={10}
    >
      10
    </option>
    <option
      value={20}
    >
      20
    </option>
    <option
      value={30}
    >
      30
    </option>
    <option
      value={40}
    >
      40
    </option>
    <option
      value={50}
    >
      50
    </option>
    <option
      value={200}
    >
      All
    </option>
  </select>,
]
`;

exports[`Storyshots TableComponent Default 1`] = `
Array [
  <div
    className="d-flex justify-content-between toolbar"
  >
    <div
      className="d-flex justify-content-start align-items-center"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <button
        className="btn btn-link btn-sm"
        data-testid="btn"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "lineHeight": "20px",
          }
        }
        type="button"
      >
        <span
          className="mr-1"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          Filters
        </span>
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 cKCFNq"
          fill="currentColor"
          focusable="false"
          height={20}
          viewBox="0 0 24 24"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
          />
        </svg>
      </button>
      <div
        className="align-middle ml-2 input-group input-group-sm"
        style={
          Object {
            "width": "initial",
          }
        }
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            <svg
              aria-hidden="true"
              className="StyledIconBase-ea9ulj-0 cKCFNq"
              fill="currentColor"
              focusable="false"
              height={16}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </span>
        </div>
        <input
          className="form-control"
          data-testid="input"
          onChange={[Function]}
          placeholder="200 records..."
          value=""
        />
      </div>
    </div>
    <div
      className="d-flex justify-content-end align-items-center text-muted"
    >
      <div
        className="mr-2"
      >
        200
         records
      </div>
      <span
        className="mr-1"
      >
        Show:
      </span>
      <select
        className="form-control form-control-sm"
        data-testid="input"
        onChange={[Function]}
        style={
          Object {
            "display": "inline",
            "width": "56px",
          }
        }
        value={10}
      >
        <option
          value={10}
        >
          10
        </option>
        <option
          value={20}
        >
          20
        </option>
        <option
          value={30}
        >
          30
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={50}
        >
          50
        </option>
        <option
          value={200}
        >
          All
        </option>
      </select>
      <div
        className="mr-2"
      >
        <div
          className="btn-group btn-group-sm"
          role="group"
          style={
            Object {
              "verticalAlign": "inherit",
            }
          }
        >
          <button
            className="btn btn-white"
            data-testid="previousPage"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="StyledIconBase-ea9ulj-0 cKCFNq"
              fill="currentColor"
              focusable="false"
              height={20}
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
          <button
            className="text-primary btn btn-white"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            1
          </button>
          <button
            className="btn btn-white"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            2
          </button>
          <button
            className="btn btn-white"
            disabled={true}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="StyledIconBase-ea9ulj-0 cKCFNq"
              fill="currentColor"
              focusable="false"
              height={16}
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </button>
          <button
            className="btn btn-white"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            19
          </button>
          <button
            className="btn btn-white"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            20
          </button>
          <button
            className="btn btn-white"
            data-testid="nextPage"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="StyledIconBase-ea9ulj-0 cKCFNq"
              fill="currentColor"
              focusable="false"
              height={20}
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div>
        <span
          className="mr-1"
        >
          Page:
        </span>
        <input
          className="form-control form-control-sm"
          data-testid="input"
          defaultValue={1}
          max={20}
          min={1}
          onChange={[Function]}
          style={
            Object {
              "display": "inline",
              "width": "48px",
            }
          }
          type="number"
        />
      </div>
    </div>
  </div>,
  <table
    className="table table-hover"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colSpan={1}
          role="columnheader"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle All Current Page Rows Selected"
            type="checkbox"
          />
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Name
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          State
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Tooltip
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 0
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            private
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            0
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 1
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            public
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            1
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 2
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            private
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            2
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 3
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            public
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            3
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 4
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            private
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            4
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 5
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            public
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            5
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 6
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            private
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            6
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 7
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            public
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            7
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 8
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            private
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            8
          </div>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          className="align-middle"
        >
          <input
            checked={false}
            onChange={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            title="Toggle Row Selected"
            type="checkbox"
          />
        </td>
        <td
          className="align-middle"
        >
          <span>
            Item 9
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span>
            public
          </span>
        </td>
        <td
          className="align-middle"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            9
          </div>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Storyshots TableComponent Loading 1`] = `
Array [
  <div
    className="d-flex justify-content-between toolbar"
  />,
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          <span
            className="glow-text"
          >
            Loading
          </span>
        </th>
        <th>
          <span
            className="glow-text"
          >
            Loading
          </span>
        </th>
        <th>
          <span
            className="glow-text"
          >
            Loading
          </span>
        </th>
        <th>
          <span
            className="glow-text"
          >
            Loading
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
        <td
          className="align-middle"
        >
          <span
            className="glow-text"
          >
            Loading
          </span>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Storyshots Toolbar Default 1`] = `
<div
  className="d-flex justify-content-between toolbar"
>
  <div>
    Children
  </div>
</div>
`;

exports[`Storyshots Toolbar Filter 1`] = `
<div
  className="d-flex justify-content-between toolbar"
>
  <div
    className="d-flex justify-content-start align-items-center"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <button
      className="btn btn-link btn-sm"
      data-testid="btn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "lineHeight": "20px",
        }
      }
      type="button"
    >
      <span
        className="mr-1"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        Filters
      </span>
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 cKCFNq"
        fill="currentColor"
        focusable="false"
        height={20}
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
        />
      </svg>
    </button>
    <div
      className="align-middle ml-2 input-group input-group-sm"
      style={
        Object {
          "width": "initial",
        }
      }
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-ea9ulj-0 cKCFNq"
            fill="currentColor"
            focusable="false"
            height={16}
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
      </div>
      <input
        className="form-control"
        data-testid="input"
        onChange={[Function]}
        placeholder="0 records..."
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Toolbar Filter N Pagination 1`] = `
<div
  className="d-flex justify-content-between toolbar"
>
  <div
    className="d-flex justify-content-start align-items-center"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <button
      className="btn btn-link btn-sm"
      data-testid="btn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "lineHeight": "20px",
        }
      }
      type="button"
    >
      <span
        className="mr-1"
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        Filters
      </span>
      <svg
        aria-hidden="true"
        className="StyledIconBase-ea9ulj-0 cKCFNq"
        fill="currentColor"
        focusable="false"
        height={20}
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
        />
      </svg>
    </button>
    <div
      className="align-middle ml-2 input-group input-group-sm"
      style={
        Object {
          "width": "initial",
        }
      }
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-ea9ulj-0 cKCFNq"
            fill="currentColor"
            focusable="false"
            height={16}
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
      </div>
      <input
        className="form-control"
        data-testid="input"
        onChange={[Function]}
        placeholder="0 records..."
        value=""
      />
    </div>
  </div>
  <div
    className="d-flex justify-content-end align-items-center text-muted"
  >
    <div
      className="mr-2"
    >
      50
       records
    </div>
    <span
      className="mr-1"
    >
      Show:
    </span>
    <select
      className="form-control form-control-sm"
      data-testid="input"
      onChange={[Function]}
      style={
        Object {
          "display": "inline",
          "width": "56px",
        }
      }
      value={10}
    >
      <option
        value={10}
      >
        10
      </option>
      <option
        value={20}
      >
        20
      </option>
      <option
        value={30}
      >
        30
      </option>
      <option
        value={40}
      >
        40
      </option>
      <option
        value={50}
      >
        50
      </option>
      <option
        value={50}
      >
        All
      </option>
    </select>
    <div
      className="mr-2"
    >
      <div
        className="btn-group btn-group-sm"
        role="group"
        style={
          Object {
            "verticalAlign": "inherit",
          }
        }
      >
        <button
          className="text-primary btn btn-white"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="btn btn-white"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="btn btn-white"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="btn btn-white"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="btn btn-white"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </div>
    </div>
    <div>
      <span
        className="mr-1"
      >
        Page:
      </span>
      <input
        className="form-control form-control-sm"
        data-testid="input"
        defaultValue={1}
        max={5}
        min={1}
        onChange={[Function]}
        style={
          Object {
            "display": "inline",
            "width": "48px",
          }
        }
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Toolbar Selection 1`] = `
<div
  className="d-flex justify-content-between toolbar"
>
  <div
    className="bg-dark text-white pl-2 pr-1 selected-col w-100 rounded"
    data-testid="selection-toolbar"
  >
    <span
      data-testid="selection-count"
    >
      3
       Selected Items
    </span>
    <div
      className="float-right"
    >
      <div
        className="btn-group btn-group-sm"
        role="group"
        style={
          Object {
            "top": "-1px",
          }
        }
      >
        <button
          className="text-white btn btn-link"
          data-testid="action-btn"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Sum
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toolbar/FilterToolbar/FilterToolbar Default 1`] = `
<div
  className="d-flex justify-content-start align-items-center"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <button
    className="btn btn-link btn-sm"
    data-testid="btn"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "lineHeight": "20px",
      }
    }
    type="button"
  >
    <span
      className="mr-1"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      Filters
    </span>
    <svg
      aria-hidden="true"
      className="StyledIconBase-ea9ulj-0 cKCFNq"
      fill="currentColor"
      focusable="false"
      height={20}
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
      />
    </svg>
  </button>
  <div
    className="align-middle ml-2 input-group input-group-sm"
    style={
      Object {
        "width": "initial",
      }
    }
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-ea9ulj-0 cKCFNq"
          fill="currentColor"
          focusable="false"
          height={16}
          viewBox="0 0 24 24"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
    </div>
    <input
      className="form-control"
      data-testid="input"
      onChange={[Function]}
      placeholder="0 records..."
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Toolbar/FilterToolbar/Overlay Default 1`] = `
<button
  className="btn btn-link btn-sm"
  data-testid="btn"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "lineHeight": "20px",
    }
  }
  type="button"
>
  <span
    className="mr-1"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    Filters
  </span>
  <svg
    aria-hidden="true"
    className="StyledIconBase-ea9ulj-0 cKCFNq"
    fill="currentColor"
    focusable="false"
    height={20}
    viewBox="0 0 24 24"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
    />
  </svg>
</button>
`;

exports[`Storyshots Toolbar/SelectionToolbar Default 1`] = `
<div
  className="bg-dark text-white pl-2 pr-1 selected-col w-100 rounded"
  data-testid="selection-toolbar"
>
  <span
    data-testid="selection-count"
  >
    3
     Selected Items
  </span>
  <div
    className="float-right"
  >
    <div
      className="btn-group btn-group-sm"
      role="group"
      style={
        Object {
          "top": "-1px",
        }
      }
    >
      <button
        className="text-white btn btn-link"
        data-testid="action-btn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sum
      </button>
    </div>
  </div>
</div>
`;
